# gen-ai-interview-app

./: .gitignore  app.py  pyproject.toml
clients/: __init__.py  database.py
core/: __init__.py  config.py  dependencies.py
database/: __init__.py  database.py
models/: __init__.py  auth_models.py
routes/: __init__.py  auth_routes.py
services/: __init__.py  auth_services.py
utils/: __init__.py  dependencies.py  utils.py
